# otus-cpp-hw-13

./: CMakeLists.txt
.github/workflows/: release.yaml
src/: CMakeLists.txt  DataReader.cpp  DataReader.h  ImageClassifier.cpp  ImageClassifier.h  Main.cpp  Types.h
test/: CMakeLists.txt  DataReaderTest.cpp
